--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=literalura
+spring.datasource.url=jdbc:postgresql://localhost/literalura_db
+spring.datasource.username=postgres
+spring.datasource.password=ACL&cag20
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
